@@ -1,3 +1,15 @@
+Tue Apr 25 21:23:28 1995  Chris Provenzano  (proven@mit.edu)
+
+        * forward.c (rd_and_store_for_creds()) : Rewritten to use
+                auth_context and the new krb5_rd_creds().
+        * forward.c (get_for_creds()) : New function replacing
+                krb5_get_for_creds() and uses auth_context and new
+                krb5_mk_creds() routine.
+        * kerberos5.c (kerberos5_send()): Set initial flags on auth_context
+		to KRB5_AUTH_CONTEXT_RET_TIME, and use new
+        	rd_and_store_for_creds() routine.
+	* kerberos5.c (kerberos5_forward()): Use the new get_for_creds().
+
 Sat Apr 22 00:50:14 1995  Theodore Y. Ts'o  (tytso@dcl)
 
 	* kerberos5.c (kerberos5_init): Only call krb5_init_context if 
